@@ -128,12 +128,15 @@ This page introduces the user to the way to detect features or objects in images
 /*! \page tutorial_segmentation Segmentation
 This page introduces the user to the way to achieve image and object segmentation.
 
-- \subpage tutorial-hsv-segmentation <br>This tutorial shows how to use HSV color scale to segment a given color in
-  an image.
+- \subpage tutorial-hsv-segmentation-intro <br>This tutorial introduces how to use HSV color scale to segment a given
+  color in an image.
 - \subpage tutorial-hsv-range-tuner <br>This tutorial shows how to use HSV tuner tool to ease defining HSV
   how/high values used to select a given color either in a single image, or in a live stream provided by a Realsense
   camera.
-
+- \subpage tutorial-hsv-segmentation-live <br>This tutorial illustrates how to use the HSV color scale to segment
+  a given color in recorded or live video stream from a Realsense camera.
+- \subpage tutorial-hsv-segmentation-pcl <br>This tutorial shows how to use the HSV color scale to segment
+  a given color in recorded or live video stream from a Realsense camera and then compute the corresponding point cloud.
 */
 
 /*! \page tutorial_computer_vision Computer vision
