@@ -3,30 +3,47 @@
 #include <iostream>
 #include <visp3/core/vpConfig.h>
 
-#if defined(VISP_HAVE_REALSENSE2)
 #include <visp3/core/vpCameraParameters.h>
 #include <visp3/core/vpImageConvert.h>
 #include <visp3/core/vpImageTools.h>
 #include <visp3/core/vpPixelMeterConversion.h>
 #include <visp3/core/vpColorDepthConversion.h>
 #include <visp3/gui/vpDisplayX.h>
+#include <visp3/io/vpVideoReader.h>
 #include <visp3/sensor/vpRealSense2.h>
 
 int main(int argc, char **argv)
 {
   std::string opt_hsv_filename = "calib/hsv-thresholds.yml";
+  std::string opt_video_filename;
+  bool show_helper = false;
 
   for (int i = 0; i < argc; i++) {
     if (std::string(argv[i]) == "--hsv-thresholds") {
       opt_hsv_filename = std::string(argv[++i]);
     }
-    else if (std::string(argv[i]) == "--help" || std::string(argv[i]) == "-h") {
+    else if (std::string(argv[i]) == "--video") {
+      if ((i+1) < argc) {
+        opt_video_filename = std::string(argv[++i]);
+      }
+      else {
+        show_helper = true;
+        std::cout << "ERROR \nMissing input video name after parameter " << std::string(argv[i]) << std::endl;
+      }
+    }
+    else if (show_helper || std::string(argv[i]) == "--help" || std::string(argv[i]) == "-h") {
       std::cout << "\nSYNOPSIS " << std::endl
         << argv[0]
+        << " [--video <input video>]"
         << " [--hsv-thresholds <filename.yml>]"
         << " [--help,-h]"
         << std::endl;
       std::cout << "\nOPTIONS " << std::endl
+        << "  --video <input video>" << std::endl
+        << "    Name of the input video filename." << std::endl
+        << "    When this option is not set, we use librealsense to stream images from a Realsense camera. " << std::endl
+        << "    Example: --video image-%04d.jpg" << std::endl
+        << std::endl
         << "  --hsv-thresholds <filename.yaml>" << std::endl
         << "    Path to a yaml filename that contains H <min,max>, S <min,max>, V <min,max> threshold values." << std::endl
         << "    An Example of such a file could be:" << std::endl
@@ -47,6 +64,20 @@ int main(int argc, char **argv)
     }
   }
 
+  bool use_realsense = false;
+#if defined(VISP_HAVE_REALSENSE2)
+  use_realsense = true;
+#endif
+  if (use_realsense) {
+    if (!opt_video_filename.empty()) {
+      use_realsense = false;
+    }
+  }
+  else if (opt_video_filename.empty()) {
+    std::cout << "Error: you should use --image <input image> option to specify an input image..." << std::endl;
+    return EXIT_FAILURE;
+  }
+
   vpColVector hsv_values;
   if (vpColVector::loadYAML(opt_hsv_filename, hsv_values)) {
     std::cout << "Load HSV threshold values from " << opt_hsv_filename << std::endl;
@@ -57,16 +88,40 @@ int main(int argc, char **argv)
     return EXIT_FAILURE;
   }
 
-  int width = 848, height = 480, fps = 60;
-  vpRealSense2 rs;
-  rs2::config config;
-  config.enable_stream(RS2_STREAM_COLOR, width, height, RS2_FORMAT_RGBA8, fps);
-  config.disable_stream(RS2_STREAM_DEPTH);
-  config.disable_stream(RS2_STREAM_INFRARED, 1);
-  config.disable_stream(RS2_STREAM_INFRARED, 2);
-  rs.open(config);
+  vpImage<vpRGBa> I;
+  int width, height;
 
-  vpImage<vpRGBa> I(height, width);
+  vpVideoReader g;
+#if defined(VISP_HAVE_REALSENSE2)
+  vpRealSense2 rs;
+#endif
+
+  if (use_realsense) {
+#if defined(VISP_HAVE_REALSENSE2)
+    width = 848; height = 480;
+    int fps = 60;
+    rs2::config config;
+    config.enable_stream(RS2_STREAM_COLOR, width, height, RS2_FORMAT_RGBA8, fps);
+    config.disable_stream(RS2_STREAM_DEPTH);
+    config.disable_stream(RS2_STREAM_INFRARED, 1);
+    config.disable_stream(RS2_STREAM_INFRARED, 2);
+    rs.open(config);
+    rs.acquire(I);
+#endif
+  }
+  else {
+    try {
+      g.setFileName(opt_video_filename);
+      g.open(I);
+    }
+    catch (const vpException &e) {
+      std::cout << e.getStringMessage() << std::endl;
+      return EXIT_FAILURE;
+    }
+    width = I.getWidth();
+    height = I.getHeight();
+  }
+
   vpImage<unsigned char> H(height, width);
   vpImage<unsigned char> S(height, width);
   vpImage<unsigned char> V(height, width);
@@ -82,7 +137,16 @@ int main(int argc, char **argv)
 
   while (!quit) {
     double t = vpTime::measureTimeMs();
-    rs.acquire(I);
+    if (use_realsense) {
+#if defined(VISP_HAVE_REALSENSE2)
+      rs.acquire(I);
+#endif
+    }
+    else {
+      if (!g.end()) {
+        g.acquire(I);
+      }
+    }
     vpImageConvert::RGBaToHSV(reinterpret_cast<unsigned char *>(I.bitmap),
                               reinterpret_cast<unsigned char *>(H.bitmap),
                               reinterpret_cast<unsigned char *>(S.bitmap),
@@ -115,14 +179,3 @@ int main(int argc, char **argv)
   std::cout << "Mean loop time: " << total_loop_time / nb_iter << std::endl;
   return EXIT_SUCCESS;
 }
-#else
-int main()
-{
-#if !defined(VISP_HAVE_REALSENSE2)
-  std::cout << "This tutorial needs librealsense as 3rd party." << std::endl;
-#endif
-
-  std::cout << "Install missing 3rd party, configure and rebuild ViSP." << std::endl;
-  return EXIT_SUCCESS;
-}
-#endif
